test/failed-3/secret/type-reconstruction/ill-typed/references/references-2.stella
// ERROR_UNEXPECTED_TYPE_FOR_EXPRESSION

language core;

extend with
  #references,
  #sequencing,
  #let-bindings,
	#type-reconstruction;

fn main(n : auto) -> auto {
  return
    let x = new(0) in
    x := x;
    *x
}
